--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js --exec babel-node",
-    "type": "module"
+    "type": "module",
+    "build": "babel src -d apiAiportConnection",
+    "start": "node apiAiportConnection"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +23,8 @@
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.19.3",
     "@babel/node": "^7.19.1",
+    "@babel/plugin-transform-regenerator": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.19.1",
     "@babel/preset-env": "^7.19.4",
     "nodemon": "^2.0.20"
   }
